--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <!-- Create a welcome file with links to all available pages -->
+    <welcome-file-list>
+        <welcome-file>menu</welcome-file>
+    </welcome-file-list>
+
     <!-- Context param to use Data Source -->
     <context-param>
         <param-name>dataSource</param-name>
@@ -16,12 +21,5 @@
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
-
-    <!-- Try without it -->
-<!--    <resource-env-ref>-->
-<!--        <description>Provide access for DataSource</description>-->
-<!--        <resource-env-ref-name>jdbc/mysql</resource-env-ref-name>-->
-<!--        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>-->
-<!--    </resource-env-ref>-->
 
 </web-app>
