--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@
         </jsp-property-group>
     </jsp-config>
 
-    <!-- Error page for FailedInsertException -->
+    <!-- Custom pages registration for errors -->
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/error_pages/404.html</location>
@@ -53,14 +53,5 @@
         <error-code>500</error-code>
         <location>/WEB-INF/error_pages/500_error.jsp</location>
     </error-page>
-<!--    <error-page>-->
-<!--        <exception-type>java.lang.RuntimeException</exception-type>-->
-<!--        <location>/WEB-INF/jsp/exception.jsp</location>-->
-<!--    </error-page>-->
-
-<!--    <error-page>-->
-<!--        <error-code>500</error-code>-->
-<!--        <location>/WEB-INF/jsp/exception.jsp</location>-->
-<!--    </error-page>-->
 
 </web-app>
