add localization to menu heading

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,3 +1,4 @@
+menu.main.title = Main menu
 menu.main.header = Railway Office
 menu.main.your_tickets = Your tickets
 menu.main.your_balance = Your balance
